# esp-csi-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/: esp-csi-rs.drawio
examples/: esp_now_central.rs  esp_now_collector.rs  esp_now_peripheral.rs  esp_now_peripheral_mute.rs  esp_now_peripheral_no_stats.rs  packets_over_latency.rs  pps_latency.rs  runtime_config.rs  sniffer_collector.rs  sniffer_wifi.rs  sta_collector.rs  test.rs  wifi_station.rs
src/lib/: csi.rs  lib.rs  time.rs
src/lib/central/: esp_now.rs  sta.rs
src/lib/collector/: esp_now.rs  mod.rs  sta.rs
src/lib/config/: csi.rs  mod.rs
src/lib/logging/: logging.rs
src/lib/peripheral/: esp_now.rs  mod.rs
