[package]
name = "esp-csi-rs"
version = "0.3.0"
edition = "2021"
authors = ["Omar Hiari"]
description = "ESP CSI Driver for Rust"
keywords = ["embedded", "esp32", "wifi", "csi"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://blog.theembeddedrustacean.com/"
repository = "https://github.com/theembeddedrustacean/esp-csi-rs"
license = "MIT OR Apache-2.0"
exclude = ["target/debug/*", "assets/*"]

[lib]
path = "src/lib/lib.rs"

[features]
#! ⚠️ At minimum you are required to choose only ONE of the device options. For the most efficient (and fastest) logging, you should combine defmt with the jtag-serial features.

default = ["no-std", "println", "auto"]
## Build without the standard library.
no-std = []
## Enable logging via defmt.
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "esp-hal/defmt",
    "esp-radio/defmt",
    "esp-backtrace/defmt",
    "embassy-executor/defmt",
    "esp-println/defmt-espflash",
]
## Enable logging via `println!()` instead of defmt.
println = ["esp-backtrace/println"]
## Enable the JTAG serial interface for logging. Only supported by ESP32-C3, ESP32-C6, and ESP32-S3.
jtag-serial = ["esp-println/jtag-serial"] # C3, C6, H2, P4, and S3 only!
## Automaically select the logging interface based on the target (Ex. UART).
auto = ["esp-println/auto"]
## Enable the UART interface for logging
uart = ["esp-println/uart"]

## Support for the ESP32
# esp32 = [
#     "esp-backtrace/esp32",
#     "esp-hal/esp32",
#     "esp-hal/rt",
#     "esp-println/esp32",
#     "esp-bootloader-esp-idf/esp32",
#     "esp-println/critical-section",
#     "esp-wifi/esp32",
#     "esp-wifi/csi",
#     "esp-wifi/sniffer",
# ]

# ## Support for the ESP32-C2
# esp32c2 = [
#     "esp-backtrace/esp32c2",
#     "esp-bootloader-esp-idf/esp32c2",
#     "esp-backtrace/println",
#     "esp-hal/esp32c2",
#     "esp-hal/rt",
#     "esp-println/esp32c2",
#     "esp-println/critical-section",
#     "esp-wifi/esp32c2",
#     "esp-wifi/csi",
#     "esp-wifi/sniffer",
# ]

# ## Support for the ESP32-C3
esp32c3 = [
        # "esp-hal/esp32c3",
        # "esp-hal/rt",
        # "esp-backtrace/esp32c3",
        # "esp-radio/esp32c3",
        # "esp-bootloader-esp-idf/esp32c3",
        # "esp-radio/csi",
        # "esp-radio/sniffer",
        # "esp-println/esp32c3",
]

# ## Support for the ESP32-C6 (WiFi 6)
# esp32c6 = [
#     "esp-hal/esp32c6",
#     "esp-hal/rt",
#     "esp-backtrace/esp32c6",
#     "esp-wifi/esp32c6",
#     "esp-bootloader-esp-idf/esp32c6",
#     "esp-wifi/csi",
#     "esp-wifi/sniffer",
#     "esp-println/esp32c6",
#     "esp-println/critical-section",
# ]

# ## Support for the ESP32-S3 (AIoT)
# esp32s3 = [
#     "esp-hal/esp32s3",
#     "esp-hal/rt",
#     "esp-backtrace/esp32s3",
#     "esp-wifi/esp32s3",
#     "esp-bootloader-esp-idf/esp32s3",
#     "esp-wifi/csi",
#     "esp-wifi/sniffer",
#     "esp-println/esp32s3",
#     "esp-println/critical-section",
# ]


[dependencies]
# Core dependencies
esp-hal = { version = "~1.0", default-features = false, optional = false, features = [
    "unstable",
    "esp32c3",
] }
esp-rtos = { version = "0.2.0", optional = false, features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32c3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", optional = false, features = [
    "esp32c3",
] }
embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "raw",
] }
embedded-io = { version = "0.7.1", optional = false }
embedded-io-async = { version = "0.7.0", optional = false }
esp-alloc = { version = "0.9.0", optional = false }
esp-backtrace = { version = "0.18.1", optional = false, features = [
    "panic-handler",
    "esp32c3",
] }
esp-println = { version = "0.16.1", optional = false, default-features = false, features = [
    "esp32c3",
] }
embassy-executor = { version = "0.9.1", optional = false }
embassy-time = { version = "0.5.0", optional = false }
esp-radio = { version = "0.17.0", default-features = false, optional = false, features = [
    "wifi",
    "sniffer",
    "esp-alloc",
    "esp32c3",
    "smoltcp",
    "unstable",
    "esp-now",
    "csi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
heapless = { version = "0.9.2", default-features = false, optional = false }
embassy-sync = { version = "0.7.0", optional = false }
enumset = { version = "1.1.5", optional = false }
embassy-futures = "0.1.2"
static_cell = "2.1.1"

# embassy-futures = { version = "0.1.2", optional = false }
# static_cell = { version = "2.1.0", optional = false, features = ["nightly"] }
# critical-section = { version = "1.2.0", optional = false }
# edge-dhcp = { version = "0.6.0", optional = false }
# edge-nal = { version = "0.5.0", optional = false }
# edge-nal-embassy = { version = "0.7.0", optional = false }
# enumset = { version = "1.1.5", optional = false }

document-features = "0.2.11"
# ieee80211 = "0.5.9"

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[package.metadata.docs.rs]
targets = ["riscv32imc-unknown-none-elf"]
features = ["esp32c3", "println"]
