[package]
name = "esp-csi-rs"
version = "0.4.0"
edition = "2021"
authors = ["Omar Hiari"]
description = "ESP CSI Driver for Rust"
keywords = ["embedded", "esp32", "wifi", "csi"]
categories = ["embedded"]
readme = "README.md"
homepage = "https://blog.theembeddedrustacean.com/"
repository = "https://github.com/theembeddedrustacean/esp-csi-rs"
license = "MIT OR Apache-2.0"
exclude = ["target/debug/*", "assets/*"]

[lib]
path = "src/lib/lib.rs"

[features]
#! ⚠️ At minimum you are required to choose only ONE of the device options. For the most efficient (and fastest) logging, you should combine defmt with the jtag-serial features.

default = ["no-std", "println", "auto", "statistics", "async-print"]
## Build without the standard library.
no-std = []
## Enable logging via defmt.
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "esp-hal/defmt",
    "esp-radio/defmt",
    "esp-backtrace/defmt",
    "embassy-executor/defmt",
    "esp-println/defmt-espflash",
]
## Enable logging via `println!()`.
println = ["dep:log", "esp-backtrace/println"]
## Automatically select the best available backend for the target.
auto = ["esp-println/auto"]
## Force the JTAG backend for logging.
jtag-serial = ["esp-println/jtag-serial"]
## Force the UART backend for logging (not recommended, much slower than JTAG backend).
uart = ["esp-println/uart"]
## Disable all logging.
no-print = ["esp-println/no-op"]
## Non-blocking async logging. This is an unstable feature and may cause unexpected behavior. Use with caution.
async-print = []
## Enable collection of runtime statistics (e.g., latency, dropped packets).
statistics = []

## Support for the ESP32
esp32 = [
    "esp-backtrace/esp32",
    "esp-hal/esp32",
    "esp-hal/rt",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-println/critical-section",
    "esp-radio/esp32",
    "esp-radio/csi",
    "esp-radio/sniffer",
    "esp-rtos/esp32",
]

# ## Support for the ESP32-C2
esp32c2 = [
    "esp-backtrace/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-backtrace/println",
    "esp-hal/esp32c2",
    "esp-hal/rt",
    "esp-println/esp32c2",
    "esp-println/critical-section",
    "esp-radio/esp32c2",
    "esp-radio/csi",
    "esp-radio/sniffer",
    "esp-rtos/esp32c2",
]

# ## Support for the ESP32-C3
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-hal/rt",
    "esp-backtrace/esp32c3",
    "esp-radio/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-radio/csi",
    "esp-radio/sniffer",
    "esp-println/esp32c3",
    "esp-rtos/esp32c3",
]

# ## Support for the ESP32-C6 (WiFi 6)
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-hal/rt",
    "esp-backtrace/esp32c6",
    "esp-radio/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-radio/csi",
    "esp-radio/sniffer",
    "esp-println/esp32c6",
    "esp-println/critical-section",
    "esp-rtos/esp32c6",
]

# ## Support for the ESP32-S3 (AIoT)
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-hal/rt",
    "esp-backtrace/esp32s3",
    "esp-radio/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-radio/csi",
    "esp-radio/sniffer",
    "esp-println/esp32s3",
    "esp-println/critical-section",
    "esp-rtos/esp32s3",
]


[dependencies]
# Core dependencies required for ESP HAL/RTOS, radio, and networking.
# Core dependencies
esp-hal = { version = "~1.0", default-features = false, optional = false, features = [
    "unstable",
] }
esp-rtos = { version = "0.2.0", optional = false, features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
] }
esp-bootloader-esp-idf = { version = "0.4.0", optional = false, features = [] }
embassy-net = { version = "0.7.1", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "raw",
] }
embedded-io = { version = "0.7.1", optional = false }
embedded-io-async = { version = "0.7.0", optional = false }
esp-alloc = { version = "0.9.0", optional = false }
esp-backtrace = { version = "0.18.1", optional = false, features = [
    "panic-handler",
] }
esp-println = { version = "0.16.1", optional = false, default-features = false, features = [
] }
embassy-executor = { version = "0.9.1", optional = false }
embassy-time = { version = "0.5.0", optional = false }
esp-radio = { version = "0.17.0", default-features = false, optional = false, features = [
    "wifi",
    "sniffer",
    "esp-alloc",
    "smoltcp",
    "unstable",
    "esp-now",
    "csi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
heapless = { version = "0.7", default-features = false, optional = false, features = [
    "serde",
] }
embassy-sync = { version = "0.7.0", optional = false }
enumset = { version = "1.1.5", optional = false }
embassy-futures = "0.1.2"
static_cell = "2.1.1"

# embassy-futures = { version = "0.1.2", optional = false }
# static_cell = { version = "2.1.0", optional = false, features = ["nightly"] }
# critical-section = { version = "1.2.0", optional = false }
# edge-dhcp = { version = "0.6.0", optional = false }
# edge-nal = { version = "0.5.0", optional = false }
# edge-nal-embassy = { version = "0.7.0", optional = false }
# enumset = { version = "1.1.5", optional = false }

document-features = "0.2.11"
# ieee80211 = "0.5.9"

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }

log = { version = "0.4.29", optional = true }

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["experimental-derive", "heapless"] }

portable-atomic = { version = "1.13.0", default-features = false }
zerocopy = { version = "0.8.37", default-features = false, features = [
    "derive",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
incremental = true
debug = 2
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false
panic = "abort"

[package.metadata.docs.rs]
# docs.rs configuration: build docs for a single embedded target with
# a representative feature set. Adjust if you want different chips in docs.
targets = ["riscv32imc-unknown-none-elf"]
features = ["esp32c3", "println"]
